maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:6: error: not found: value estfaceMur
         if (!estfaceMur){
              ^