maze.lessons.maze.wallfollower.WallFollowerMaze.scala.code
override def run() {
   def keepHandOnSideWall(){
     gauche()
     if (estFaceMur){
       droite()
         if (!estfaceMur){
           avance()
         }
         else{
           droite()
         }
       }else {
         avance()
     }
   }
     
  while (!estSurBiscuit){
    keepHandOnSideWall
  }
  prendBiscuit()
}